kube/public-site-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: public-site-svc
  labels:
    name: public-site-svc
spec:
  selector:
    name: public-site-svc
  type: ClusterIP
  ports:
    - name: public-prxy-prt
      port: 10443
      targetPort: 10443
---
apiVersion: v1
kind: Service
metadata:
  name: pub-site-av-svc
  labels:
    name: pub-site-av-svc
spec:
  selector:
    name: public-site-svc
  type: ClusterIP
  ports:
    - name: pub-site-av-prt
      port: 8080
      targetPort: 8080
