kube/public-site-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-site-ingress
  labels:
    cert-manager.io/solver: route53
  annotations:
    cert-manager.io/enabled: "true"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx-internal"
    ingress.kubernetes.io/rewrite-target: "/new"
    ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: public-site-svc
            port:
              number: 10443
